[package]
name = "type_hash_macros"
version = "0.1.0"
authors = ["Peter Hall <peterjoel@gmail.com"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
type_hash_core = { path = "../core" }

[dev-dependencies]
syn = { version = "1", features = ["extra-traits"] }
