[package]
name = "type_hash_macros"
version = "0.2.0"
authors = ["Peter Hall <peterjoel@gmail.com"]
edition = "2018"
license = "MIT"
description = """
Internal macro definitions. They may not work properly if not used via the type_hash crate.
"""

[lib]
proc-macro = true

[dependencies]
bind_match = "0.1"
either = "1.6"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
thiserror = "1"

[dev-dependencies]
syn = { version = "1", features = ["extra-traits"] }
